# Labs-PR

Lab1-http-server/: Dockerfile  README.md  client.py  dir_listing.html  docker-compose.yml  server.py
Lab1-http-server/content/: index.html  style.css
Lab2-concurrent-http-server/: Dockerfile  README.md  client.py  concurrent_server.py  docker-compose.yml  performance_test.py  server.py  test_race_condition.py  test_rate_limit.py  test_single_server.py
Lab2-concurrent-http-server/content/: index.html
Lab2-concurrent-http-server/files/pages/: 404.html  (+2 more)
Lab3-multiplayer-game/: README.md
Lab3-multiplayer-game/backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Lab3-multiplayer-game/backend/docs/source/: conf.py  index.rst
Lab3-multiplayer-game/backend/scripts/: multyplayer_simulation.py  simulation.py  single_player_sim.py
Lab3-multiplayer-game/backend/src/: server.py
Lab3-multiplayer-game/backend/src/commands/: commands.py
Lab3-multiplayer-game/backend/src/game/: __init__.py  board.py  space.py
Lab3-multiplayer-game/backend/src/server/: __init__.py
Lab3-multiplayer-game/backend/tests/: test_board.py  test_commands.py  test_concurrent.py  test_game_rules.py  test_map.py  test_simulation.py  test_watch.py
Lab3-multiplayer-game/public/: index.html
Lab4-key-value-store/: Dockerfile  docker-compose.yml  follower.py  leader.py  performance_analysis.py  test_integration.py
Lab4-key-value-store/Tests/: test_integration.py
Lab4-key-value-store/new_version/: README.md  benchmark.py  docker-compose.yml
(+6 files in other folders)
